fixed text alignment

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -33,6 +33,10 @@
     z-index: 9999;
 }
 
+input{
+    text-align: left;
+}
+
 #footer {
     position: relative;
     top: auto;
